fix for overlapping location cards

--- a/src/css/components/location-card-list.css
+++ b/src/css/components/location-card-list.css
@@ -4,6 +4,8 @@
   justify-content: center;
   margin: 0;
   width:100%;
+  transform-style: preserve-3d;
+
 }
 
 .location-card-list .location-card {
