--- a/src/css/sections/scatterplot.css
+++ b/src/css/sections/scatterplot.css
@@ -1,10 +1,5 @@
 
 
-
-.section.section--scatterplot {
-
-}
-
 @media(min-width: 960px) {
   .section.section--scatterplot {
     justify-content: stretch;
